Adding partial implementation. Validating url.

--- a/urlShortener/package.json
+++ b/urlShortener/package.json
@@ -14,8 +14,8 @@
   "author": "Dhruv",
   "license": "MIT",
   "dependencies": {
-    "mongodb": "*",
-    "connect": "*",
-    "body-parser": "*"
+    "body-parser": "*",
+    "express": "*",
+    "mongodb": "*"
   }
 }
