--- a/urlShortener/package.json
+++ b/urlShortener/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "*",
+    "ejs": "^2.6.1",
     "express": "*",
     "mongodb": "*"
   }
