--- a/fileMetadata/package.json
+++ b/fileMetadata/package.json
@@ -13,6 +13,7 @@
   "author": "Dhruv",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "multer": "^1.4.1"
   }
 }
